--- a/firstrecipe.html
+++ b/firstrecipe.html
@@ -14,7 +14,9 @@
 </head>
 <body id="pizzabody">
 
-<H1 class="centertext"><u>Pizza recipe</u></H1>
+<H1 class="centertext">Pizza recipe</H1>
+<p class="normaltext">let's learn to make a simple pizza 🍕</p>
+<br>
 <div id="pizzabox">
 <H2 class="normaltext">Ingredients</H2>
 <h2 class="centertext">For the dough</h2>
@@ -79,5 +81,6 @@
 <hr>
 <a href="Home page.html"><button>
 Home page🏠</button></a>
+<a href="secondrecipe.html"><button>Coffee recipe</button></a>
 </body>
 </HTML>
