--- a/Home page.html
+++ b/Home page.html
@@ -36,7 +36,7 @@
 <hr>
 <footer>
 <h2 class="centertext">Let's Learn</h2>
-<a href="firstrecipe.html"><button>First recipe</button></a>
+<a href="firstrecipe.html"><button>pizza recipe</button></a>
 </footer>
 </main>
 
