--- a/firstrecipe.html
+++ b/firstrecipe.html
@@ -77,10 +77,10 @@
 </ol>
 <hr>
 </div>
-<H1 class="textcenter"> Now You can enjoy yourself a Pizza</H1>
+<H1 class="textcenter"> Now You can enjoy yourself a 🍕!</H1>
 <hr>
 <a href="Home page.html"><button>
 Home page🏠</button></a>
-<a href="secondrecipe.html"><button>Coffee recipe</button></a>
+<a href="secondrecipe.html"><button>next recipe</button></a>
 </body>
 </HTML>
