--- a/secondrecipe.html
+++ b/secondrecipe.html
@@ -38,6 +38,8 @@
 <hr>
 
 <H2>Now Enjoy a Hot cup of Coffee ☕!</H2>
+<br>
+<a href="firstrecipe.html"><button>previous recipe</button></a>
 </body>
 
 
