--- a/firstrecipe.html
+++ b/firstrecipe.html
@@ -5,7 +5,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<title>Home page</title>
+<title>Pizza recipe</title>
 
 <link rel="stylesheet" href="style.css">
 
@@ -75,7 +75,6 @@
 <h5>Serve</h5>
 <li>Add Oregano and Chilli flakes</li>
 </ol>
-<hr>
 </div>
 <H1 class="textcenter"> Now You can enjoy yourself a 🍕!</H1>
 <hr>
