--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <ul>
 <li><a href="firstrecipe.html"><b class="centertext">Pizza</b>(Simple) recipe</a></li>
 <br>
-<li><a href="#"><b class="centertext">Chai</b> recipe</a></li>
+<li><a href="thirdrecipe.html"><b class="centertext">Chai</b> recipe</a></li>
 <br>
 <li><a href="secondrecipe.html"><b class="centertext">Milk coffee</b> recipe(Hot and Simple) </a></li>
 </ul>
@@ -36,7 +36,7 @@
 <!-- above is header -->
 <main>
 <h2 class="centertext">About</h2>
-<p class="normaltext"> In this website you can learn to <big class="centertext">Cook</big> many Items, so hold your appetite and learn in Simple and easy way</p>
+<p class="normaltext"> In this website you can learn to <big class="centertext">Cook</big> many Items, so hold your appetite and learn in a Simple and easy way!!</p>
 <br>
 <hr>
 </main>
